# rag-agent-chat

./: .env.example  .gitignore  Dockerfile.agent  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
documentation/: agent_architecture.md  architecture.md  axes_amelioration.md  extraction_donnees.md  llm_integration_plan.md
documentation/services/: ollama.md
prompts/: answer_with_context.j2  rewrite_query.j2  system.txt
scripts/: e2e_smoke.sh  ollama_entrypoint.sh
src/agent/: graph.py  graph_context.py  llm.py  minio_client.py  retriever.py  settings.py  state.py  tools.py
src/api/: main.py  schemas.py
src/frontend/: app.py
tests/: conftest.py
tests/unit/: test_graph_context.py  test_minio_client.py  test_retriever.py  test_schemas.py  test_schemas_validation.py
